feat : Adicionado o swagger e corrigido algumas rotas
